--- a/index.html
+++ b/index.html
@@ -5,12 +5,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="img/favicon.ico">
         <link href="styles/style.css" rel="stylesheet" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;0,700;1,200;1,400&display=swap" rel="stylesheet">
+
         <title>Casa Julita</title>
     </head>
     <body>
+
         <nav>
             <div class="logo"></div>
         </nav>
-        
+
+        <div class="content">
+            <div class="content-int">
+                <div class="box">
+                    <div class="box-int libreria">
+                        <div class="title"><h1><span class="resaltar">¿Articulos de Libreria?</span></h1></div>
+
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="box-int grafica">
+                        <div class="title"><h1><span class="resaltar">¿Impresiones?</span></h1></div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
     </html>
